--- a/templates/users/index.phtml
+++ b/templates/users/index.phtml
@@ -1,35 +1,19 @@
+<a href="/users">Все Пользователи</a>
+
 <!-- BEGIN (write your solution here) -->
+<form action="/users" method="get">
+    <input type="search" name="term" value="<?= htmlspecialchars($term) ?>" />
+    <input type="submit" value="Search" />
+</form>
 
 <table>
-
-<?php foreach ($userArr as $user): ?>
-
+    <?php foreach ($users as $user): ?>
     <tr>
-    <td><?= $user['id']; ?></td>
-    <td><a href="/users/<?= $user['id'] ?>"> <?= $user['firstName']; ?> </a> </td>
-    <td><?= $user['lastName']; ?></td>
-    <td><?= $user['email']; ?></td>
+        <td><?= $user['id'] ?></td>
+        <td><?= $user['firstName'] ?></td>
+        <td><?= $user['lastName'] ?></td>
+        <td><?= $user['email'] ?></td>
     </tr>
-
-<?php endforeach; ?>
-
+    <?php endforeach; ?>
 </table>
-
-<?php //print_r($users); ?>
-
-<p> Страницы: </p>
-
-<?php for ($i = 1; $i<= $pagesCount; $i++) { ?>
-    <span>
-    <?php if ($i != $pageId): ?>
-        <a href="/users?page=<?= $i; ?>"><?= $i; ?></a>
-    <?php else: ?>
-        <?= $i; ?>
-    <?php endif; ?>
-    </span>
-
-<?php } ?>
-
-
-
 <!-- END -->
